mudanças no curso

--- a/_intro/intro.html
+++ b/_intro/intro.html
@@ -95,19 +95,19 @@ Documentação.
 - Arquiteturas de Software (cliente-servidor, cliente-serviço, monolíto, microsserviços, MVC, REST, plugins e pipes-and-filter, publish-subscribe)
 - Filosofias (lean, ágil, devops ...)
 
-- Se rolar tempo: AWS, CI/CD
+- Se rolar tempo: CI/CD
 
 > Mais ainda vai existir coisas teóricas que auxiliam à prática
 
 ---
 #Agenda:
 
-- Revisão de Java + alguns padrões de projeto infiltrados (3 ~ 4 aulas)
+- Revisão de Java + alguns padrões de projeto infiltrados (3 ~ 4 aulas) - se for necessário
 - Back com Sprint Boot (6 + práticas)
   - App restfull
   - Data + JPA
   - Tópicos
-- Fron com React (6 + práticas)
+- Front com React (6 + práticas)
   - Conexão com o back
   - CRUD e Forms
   - Listagens e gráficos
@@ -131,56 +131,27 @@ Documentação.
 ---
 #Avaliação
 3 partes:
-- 1 nota: das tarefas passadas ao longo do curso
-- 2 nota: do trabalho final contendo um sistema desenvolvido 
-- 3 nota: prova 
-
-Datas de avaliações:
-- 1 nota: ao longo do curso
-- 2 nota: 22/06/2020
-- 3 nota: 24/06/2020
-- reposição: 29/06/2020
-- final: 01/07/2020
+- 1 nota: primeira entrega do trabalho (backend + testes)
+- 2 nota: segunda entrega do trabalho (frontend)
+- 3 nota: apresentação final juntando tudo
+- Reposição e Final: são mais prazo para entregar o trabalho
 
 ---
 #Avaliação
-1 nota:
- - Será o desenvolvimento de um mini trabalho, em partes distribuídas ao longo do curso, na forma de atividades
-
- > Tema: gerenciamento de gastos e saldos em contas, investimentos, ... com a capacidade de acompanhar mês a mês
-
- - Professor irá passar a especificação das funcionalidades e sistema no momento oportuno
-
----
-#Avaliação
-2 nota:
 
 > Trabalho desenvolvido pelo aluno
 
-- Equipes de 1 à 3 pessoas
+- Equipes de 1 à 4 pessoas
 - Tema livre
-  - Deve ser especificado até dia 15/04. Sujeito a autorização
+  - Deve ser especificado até a data prevista em planejamento. Sujeito a autorização
 - Necessário para definir o tema: 
   - Objetivo
   - Funcionalidades
   - Telas desenhas com interação
 
-Será fornecido o modelo
-
----
-#Avaliação
-
-3 nota:
-
-> Ainda não fechei se será de marcar ou escrever ou implementação prática :)
-
-Mas vai ter!
-
-
 ---
 #Comunicação
- - Email: geraldo@nca.ufma.br
- - Site: nca.ufma.br/~geraldo
+ - Email: geraldo@nca.ufma.br 
  - SIGAA
 
  - Querem sugerir outro?
