nova versão do projeto

--- a/_react/introducao/introducao.html
+++ b/_react/introducao/introducao.html
@@ -30,7 +30,7 @@ Laboratório de Programação
 
 - Tende a ser de simples aprendizado
 
-- Doc: <a href="https://reactjs.org/docs/getting-started.html"> React.js Getting Started</a>
+- Doc: <a href="https://react.dev/learn"> React.js Getting Started</a>
 
 ---
 # Flux
