--- a/_doc_projeto/projeto_ref_2023.html
+++ b/_doc_projeto/projeto_ref_2023.html
@@ -12,7 +12,7 @@
 name: inverse
 class: center, middle, main-title
 
-# Projeto Referências para os Labs
+# Projeto Referência para a disciplina
 
 Laboratório de Programação
 
@@ -45,33 +45,6 @@ Laboratório de Programação
   - Produção com Discentes
 
 ---
-# Modelo de dados
-<center>
-  <img src="modelo_2023.png" width="650">
-</center>
-
----
-# Modelo de Dados 
-
-- <a href="https://dbdiagram.io/d/643326948615191cfa8c86b3">Link no dbdiagram.io</a>
-- <a href="">Link DDL</a>
-- 
-
-
-
-
-
-
----
-# Visão Arquitetural
-
-
----
-# Protótipos
-
-
-
----
 # Escolhas Arquiteturais
 
 - Camadas:
@@ -83,6 +56,27 @@ Laboratório de Programação
   - consumidos pelo `frontend`
 
 
+---
+# Modelo de dados
+<center>
+  <img src="modelo_2023.png" width="650">
+</center>
+
+---
+# Modelo de Dados 
+
+- <a href="https://dbdiagram.io/d/643326948615191cfa8c86b3">Link no dbdiagram.io</a>
+- <a href="http://nca.ufma.br/~geraldo/labprog/aulas/_doc_projeto/ppgs_ddl.sql">Link DDL</a>
+- 
+
+
+
+---
+# Visão Arquitetural
+
+
+---
+# Protótipos
 
 
 
