melhorias em git

--- a/_git/git.html
+++ b/_git/git.html
@@ -105,6 +105,11 @@ Laboratório de Programação
 
 ---
 #Referências
+ - Site com comandos GIT: 
+ <a href="https://www.nobledesktop.com/learn/git/git-branches">
+Git Branches: List, Create, Switch to, Merge, Push, & Delete
+</a>
+
  - Livro do Git:
 
 <center>
