--- a/_react/componentes/componentes.html
+++ b/_react/componentes/componentes.html
@@ -520,7 +520,7 @@ class: center, middle, main-title
     <script src="../../js/remark-latest.min.js">
     </script>
     <script>
-      var slideshow = remark.create();
+      var slideshow = remark.create({ ratio: "16:9" });
     </script>
   </body>
 </html>
